<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_import_programs"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/import_programs" />
        <item
            android:id="@+id/nav_import_audios"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/import_audios" />
        <item
            android:id="@+id/nav_get_audio_task"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/get_one_audio" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/settings" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_start_bgservice"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/start_scheduler" />
            <item
                android:id="@+id/nav_stop_bgservice"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/stop_scheduler" />
        </menu>
    </item>

</menu>
